--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
 
     "ALIVE_IMG": {
       "description": "Put your alive img here.",
-      "required": true
+      "notrequired": true
     },
     
     "ALIVE_MSG": {
