--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "YourBot",
-  "description": "Javascript WhatsApp bot made by YourName",
-  "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
+  "name": "CASEYRHODES_MD🦄",
+  "description": "Javascript WhatsApp bot made by CASEYRHODES 🌟",
+  "logo": "https://telegra.ph/file/8a428aa58e9f7fd403ee3.jpg",
   "keywords": ["bot"],
   "success_url": "/",
 
