--- a/app.json
+++ b/app.json
@@ -1,31 +1,68 @@
 {
-  "name": "CASEYRHODES",
-  "description": "Javascript WhatsApp bot made by YourName",
+  "name": "CASEYRHODES🌟",
+  "description": "Javascript WhatsApp bot made by🦄 caseyrhodes🦄",
   "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
   "keywords": ["bot"],
   "success_url": "/",
-
-  "env": {
-    "SESSION_ID": {
-      "description": "Put the session-id here.",
-      "required": true
     },  
-
-    "ALIVE_IMG": {
-      "description": "Put your alive img here.",
-      "required": false
+ }
+"MODE": {
+      "description": "mode public or private",
+      "required": true,
+      "value": "public"
+       },
+     "HKEY": {
+      "description": "Put your Heroku API key Here",
+      "required":false,
+      "value": ""
     },
+     "HAPP": {
+      "description": "Put the Heroku app name, same as above entered",
+      "required": true,
+      "value": ""
+       },
+    "PREFIX": {
+      "description": "Put any one symbol here except @ and + , leave it Blank if you want to use multiple prefix",
+      "required": false,
+      "value": "!"
+    },
+    "BOT_NAME": {
+      "description": "Put your BOT a name",
+      "required": true,
+      "value": "🔮 CASEYRHODES 🔮"
+      },
+    "DATABASE_URL": {
+      "description": "Put your MongoDB here",
+      "required": false,
+      "value": ""
+      },
+    "STATUSVIEW": {
+      "description": "Make it true if you want bot to view status",
+      "required": false,
+      "value": "false"
     
-    "ALIVE_MSG": {
-      "description": "Put your alive msg here.",
-      "required": false
-    }   
-},
-
-     "buildpacks": [
-        {
-            "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
-        }
-     ],
-  "stack": "heroku-24"
+    },
+    "SESSION_ID": {
+      "description": "put your session ID here in the box below",
+      "required": true,
+      "value": ""
+    }
+    
+   
+  },
+    
+  "buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    },
+    {
+      "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick.git"
+    },
+    {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+    },
+    {
+      "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
+    }
+  ]
 }
