--- a/sample-config.env
+++ b/sample-config.env
@@ -3,7 +3,7 @@ THUMB_IMAGE = "https://telegra.ph/file/066c7cd165c3db62f796e.jpg"
 port = 5000
 email = "sam@secktor.live"
 global_url = "instagram.com"
-OWNER_NAME = "𝔠𝔞𝔰𝔢𝔶 𝔯𝔥𝔬𝔡𝔢𝔰"
+OWNER_NAME = "GREY-HEART-TECH"
 AUTO_REACTION = false
 FAKE_COUNTRY_CODE = 92
 READ_MESSAGE = false
